Removes hero element

--- a/docs/layout/grid.html
+++ b/docs/layout/grid.html
@@ -84,8 +84,6 @@
                   </li>
                   <li class="menu-item"><a href="../layout/responsive.html">Responsive</a>
                   </li>
-                  <li class="menu-item"><a href="../layout/hero.html">Hero</a>
-                  </li>
                   <li class="menu-item"><a href="../layout/navbar.html">Navbar</a>
                   </li>
                 </ul>
@@ -203,40 +201,40 @@
             <p>Layout includes flexbox based responsive grid system with 12 columns.</p>
             <div class="docs-demo columns">
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primary docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primar docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primar docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primar docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primar docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-primary text-secondary docs-block"></div>
+                <div class="bg-primary docs-block"></div>
               </div>
               <div class="column">
-                <div class="bg-secondary text-primar docs-block"></div>
+                <div class="bg-secondary docs-block"></div>
               </div>
             </div>
             <div class="columns">
@@ -280,7 +278,7 @@
                 <div class="bg-gray docs-block">col-6 (gapless)</div>
               </div>
               <div class="column col-6">
-                <div class="bg-secondary text-primary docs-block">col-6 (gapless)</div>
+                <div class="bg-secondary docs-block">col-6 (gapless)</div>
               </div>
             </div>
             <pre class="code" data-lang="HTML"><code><span class="hljs-comment">&lt;!-- gapless columns --&gt;</span>
@@ -311,10 +309,10 @@
                 <div class="bg-gray docs-block">col-6</div>
                 <div class="columns">
                   <div class="column col-6">
-                    <div class="bg-secondary text-primary docs-block">col-6</div>
+                    <div class="bg-secondary docs-block">col-6</div>
                   </div>
                   <div class="column col-6">
-                    <div class="bg-secondary text-primary docs-block">col-6</div>
+                    <div class="bg-secondary docs-block">col-6</div>
                   </div>
                 </div>
               </div>
@@ -345,7 +343,7 @@
                 <div class="bg-gray docs-block">col-2</div>
               </div>
               <div class="column col-4 col-mx-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-mx-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-mx-auto</div>
               </div>
             </div>
             <div class="columns text-center">
@@ -353,12 +351,12 @@
                 <div class="bg-gray docs-block">col-2</div>
               </div>
               <div class="column col-4 col-ml-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-ml-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-ml-auto</div>
               </div>
             </div>
             <div class="columns text-center">
               <div class="column col-4 col-ml-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-ml-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-ml-auto</div>
               </div>
               <div class="column col-2">
                 <div class="bg-gray docs-block">col-2</div>
@@ -366,7 +364,7 @@
             </div>
             <div class="columns text-center">
               <div class="column col-4 col-mx-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-mx-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-mx-auto</div>
               </div>
               <div class="column col-2">
                 <div class="bg-gray docs-block">col-2</div>
@@ -374,7 +372,7 @@
             </div>
             <div class="columns text-center">
               <div class="column col-4 col-mr-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-mr-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-mr-auto</div>
               </div>
               <div class="column col-2">
                 <div class="bg-gray docs-block">col-2</div>
@@ -382,7 +380,7 @@
             </div>
             <div class="columns text-center">
               <div class="column col-4 col-mx-auto">
-                <div class="bg-secondary text-primary docs-block">col-4 col-mx-auto</div>
+                <div class="bg-secondary docs-block">col-4 col-mx-auto</div>
               </div>
             </div>
             <pre class="code" data-lang="HTML"><code><span class="hljs-comment">&lt;!-- grid offset example --&gt;</span>
@@ -399,7 +397,7 @@
             </p>
             <div class="columns">
               <div class="column col-auto">
-                <div class="bg-secondary text-primary docs-block">col-auto</div>
+                <div class="bg-secondary docs-block">col-auto</div>
               </div>
               <div class="column">
                 <div class="bg-gray docs-block">col</div>
@@ -407,7 +405,7 @@
             </div>
             <div class="columns">
               <div class="column col-lg-auto col-6">
-                <div class="bg-secondary text-primary docs-block">col-lg-auto</div>
+                <div class="bg-secondary docs-block">col-lg-auto</div>
               </div>
               <div class="column">
                 <div class="bg-gray docs-block">col</div>
