--- a/docs/src/layout/grid.pug
+++ b/docs/src/layout/grid.pug
@@ -14,29 +14,29 @@ block docs-content
 
     .docs-demo.columns
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primary.docs-block
+        .bg-secondary.docs-block
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primar.docs-block
+        .bg-secondary.docs-block
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primar.docs-block
+        .bg-secondary.docs-block
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primar.docs-block
+        .bg-secondary.docs-block
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primar.docs-block
+        .bg-secondary.docs-block
       .column
-        .bg-primary.text-secondary.docs-block
+        .bg-primary.docs-block
       .column
-        .bg-secondary.text-primar.docs-block
+        .bg-secondary.docs-block
     .columns
       .column.col-12
         .bg-gray.docs-block col-12 (100%)
@@ -77,7 +77,7 @@ block docs-content
       .column.col-6
         .bg-gray.docs-block col-6 (gapless)
       .column.col-6
-        .bg-secondary.text-primary.docs-block col-6 (gapless)
+        .bg-secondary.docs-block col-6 (gapless)
 
     pre.code(data-lang='HTML')
       code
@@ -116,9 +116,9 @@ block docs-content
         .bg-gray.docs-block col-6
         .columns
           .column.col-6
-            .bg-secondary.text-primary.docs-block col-6
+            .bg-secondary.docs-block col-6
           .column.col-6
-            .bg-secondary.text-primary.docs-block col-6
+            .bg-secondary.docs-block col-6
       .column.col-6
         .bg-gray.docs-block col-6
 
@@ -148,30 +148,30 @@ block docs-content
       .column.col-2
         .bg-gray.docs-block col-2
       .column.col-4.col-mx-auto
-        .bg-secondary.text-primary.docs-block col-4 col-mx-auto
+        .bg-secondary.docs-block col-4 col-mx-auto
     .columns.text-center
       .column.col-2
         .bg-gray.docs-block col-2
       .column.col-4.col-ml-auto
-        .bg-secondary.text-primary.docs-block col-4 col-ml-auto
+        .bg-secondary.docs-block col-4 col-ml-auto
     .columns.text-center
       .column.col-4.col-ml-auto
-        .bg-secondary.text-primary.docs-block col-4 col-ml-auto
+        .bg-secondary.docs-block col-4 col-ml-auto
       .column.col-2
         .bg-gray.docs-block col-2
     .columns.text-center
       .column.col-4.col-mx-auto
-        .bg-secondary.text-primary.docs-block col-4 col-mx-auto
+        .bg-secondary.docs-block col-4 col-mx-auto
       .column.col-2
         .bg-gray.docs-block col-2
     .columns.text-center
       .column.col-4.col-mr-auto
-        .bg-secondary.text-primary.docs-block col-4 col-mr-auto
+        .bg-secondary.docs-block col-4 col-mr-auto
       .column.col-2
         .bg-gray.docs-block col-2
     .columns.text-center
       .column.col-4.col-mx-auto
-        .bg-secondary.text-primary.docs-block col-4 col-mx-auto
+        .bg-secondary.docs-block col-4 col-mx-auto
 
     pre.code(data-lang='HTML')
       code
@@ -192,12 +192,12 @@ block docs-content
 
     .columns
       .column.col-auto
-        .bg-secondary.text-primary.docs-block col-auto
+        .bg-secondary.docs-block col-auto
       .column
         .bg-gray.docs-block col
     .columns
       .column.col-lg-auto.col-6
-        .bg-secondary.text-primary.docs-block col-lg-auto
+        .bg-secondary.docs-block col-lg-auto
       .column
         .bg-gray.docs-block col
 
