--- a/docs/src/layout/navbar.pug
+++ b/docs/src/layout/navbar.pug
@@ -10,18 +10,15 @@ block docs-content
   +docs-heading('navbar', 'Navbar')
 
     p Navbar is a layout container that appears in the header of apps and websites.
-
+   
     .docs-demo.columns
       .column
         .navbar
-          .navbar-section
-            a.navbar-brand.text-bold.mr-2(href="#navbar") ridestyler.ui
-            a.btn.btn-link(href="#navbar") Docs
-            a.btn.btn-link(href="https://github.com/picturepan2/ridestyler.ui") GitHub
-          .navbar-section
-            .input-group.input-inline
-              input.form-input(type="text" placeholder="search")
-              button.btn.btn-primary.input-group-btn Search
+          .navbar-brand RideStyler
+          section.navbar-section
+            button.btn.btn-link
+              | Wheel Co. 
+              i.icon.icon-caret-down
 
     p
       | The navbar component can include logo brand, nav links and buttons, search box or any combination of those elements.
@@ -32,9 +29,7 @@ block docs-content
         :highlight(lang="html")
           <header class="navbar">
             <section class="navbar-section">
-              <a href="..." class="navbar-brand mr-2">ridestyler.ui</a>
-              <a href="..." class="btn btn-link">Docs</a>
-              <a href="..." class="btn btn-link">GitHub</a>
+              <a href="..." class="navbar-brand">RideStyler</a>
             </section>
             <section class="navbar-section">
               <div class="input-group input-inline">
@@ -43,6 +38,45 @@ block docs-content
               </div>
             </section>
           </header>
+    
+    +docs-subheading('navbar-branded', 'Branded')
+
+    p
+      | You can use #[code navbar-branded] class to use the branded navbar styling. Add a 
+      | #[code .navbar-brand] with a #[code .navbar-brand-logo] element inside of it to get 
+      | the branded logo. Add an #[code .icon] element and put your logo inside of it to 
+      | get your app's logo overlaid ontop.
+
+    .docs-demo.columns
+      .column
+        .navbar.navbar-branded
+          .navbar-brand
+            .navbar-brand-logo
+            i.icon.icon-car
+          section.navbar-section
+            h1 Calculators
+          section.navbar-section
+            button.btn.btn-link
+              | Wheel Co. 
+              i.icon.icon-caret-down
+    
+    pre.code(data-lang="HTML")
+      code
+        :highlight(lang="html")
+          <div class="navbar navbar-branded">
+            <div class="navbar-brand">
+              <div class="navbar-brand-logo"></div>
+              <i class="icon icon-car"></i>
+            </div>
+            <section class="navbar-section">
+              <h1>Calculators</h1>
+            </section>
+            <section class="navbar-section">
+              <button class="btn btn-link">Wheel Co. <i class="icon icon-caret-down"></i></button>
+            </section>
+          </div>
+    
+    +docs-subheading('navbar-centered', 'Centered')
 
     p
       | You can use #[code navbar-center] class to have a centered section.
@@ -75,7 +109,5 @@ block docs-content
               <a href="#" class="btn btn-link">GitHub</a>
             </section>
           </header>
-        
-    include ../_layout/_ad-c.pug
 
   include ../_layout/_footer.pug
