--- a/docs/layout/navbar.html
+++ b/docs/layout/navbar.html
@@ -265,7 +265,9 @@
               <div class="column col-12">
                 <div class="navbar">
                   <div class="navbar-section"><a class="btn btn-link" href="#navbar">Docs</a><a class="btn btn-link" href="#navbar">Examples</a></div>
-                  <div class="navbar-center"><img src="../img/ridestyler.ui-logo.svg" alt="ridestyler.ui"></div>
+                  <div class="navbar-center">
+                    <div class="ridestyler-logo-full light"></div>
+                  </div>
                   <div class="navbar-section"><a class="btn btn-link" href="https://twitter.com/ridestyler.uicss">Twitter</a><a class="btn btn-link" href="https://github.com/picturepan2/ridestyler.ui">GitHub</a></div>
                 </div>
               </div>
