--- a/docs/src/layout/navbar.pug
+++ b/docs/src/layout/navbar.pug
@@ -88,7 +88,7 @@ block docs-content
             a.btn.btn-link(href="#navbar") Docs
             a.btn.btn-link(href="#navbar") Examples
           .navbar-center
-            img(src="../img/ridestyler.ui-logo.svg" alt="ridestyler.ui")
+            .ridestyler-logo-full.light
           .navbar-section
             a.btn.btn-link(href="https://twitter.com/ridestyler.uicss") Twitter
             a.btn.btn-link(href="https://github.com/picturepan2/ridestyler.ui") GitHub
