--- a/src/_avatars.scss
+++ b/src/_avatars.scss
@@ -1,11 +1,13 @@
 // Avatars
 .avatar {
 	@include avatar-base();
-	background: $secondary-color;
+	background: $bg-color;
     border-radius: 50%;
-    color: $active-color;
+    color: $body-font-color;
 	display: inline-block;
-	font-weight: 300;
+	
+	font-family: $heading-font-family;
+    font-weight: bold;
 	line-height: 1.25;
 	margin: 0;
 	position: relative;
