Updates badges styling

--- a/src/_badges.scss
+++ b/src/_badges.scss
@@ -6,23 +6,24 @@
   &[data-badge],
   &:not([data-badge]) {
     &::after {
-      background: $primary-color;
+      background: $active-color;
       background-clip: padding-box;
-      border-radius: .5rem;
+      border-radius: 1rem;
       box-shadow: 0 0 0 .1rem $bg-color-light;
       color: $light-color;
       content: attr(data-badge);
       display: inline-block;
-      transform: translate(-.05rem, -.5rem);
+      transform: translate(-.05rem, -1.3rem);
+      z-index: 1;
     }
   }
   &[data-badge] {
     &::after {
       font-size: $font-size-sm;
-      height: .9rem;
+      min-height: .9rem;
       line-height: 1;
       min-width: .9rem;
-      padding: .1rem .2rem;
+      padding: .3rem .5rem;
       text-align: center;
       white-space: nowrap;
     }
@@ -30,10 +31,12 @@
   &:not([data-badge]),
   &[data-badge=""] {
     &::after {
-      height: 6px;
-      min-width: 6px;
+      $size: 1rem;
+
+      height: $size;
+      min-width: $size;
       padding: 0;
-      width: 6px;
+      width: $size;
     }
   }
 
