Adds shadow utilities

--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -85,7 +85,8 @@ block content
             {url: 'loading', name: 'Loading'},
             {url: 'position', name: 'Position'},
             {url: 'shapes', name: 'Shapes'},
-            {url: 'text', name: 'Text'}
+            {url: 'text', name: 'Text'},
+            {url: 'shadow', name: 'Shadow'}
           )
           +docs-accordion(
             'experimentals',
