--- a/docs/src/utilities.pug
+++ b/docs/src/utilities.pug
@@ -88,6 +88,15 @@ block docs-content
             | Text alignment, styles and overflow things
           .card-footer
             a.btn.btn-primary(href="utilities/text.html") View
+
+      .column.col-6.col-xs-12
+        .card
+          .card-header
+            .card-title.h5 Shadow utilities
+          .card-body
+            | Adding shadows to elements
+          .card-footer
+            a.btn.btn-primary(href="utilities/shadow.html") View
               
     include _layout/_ad-c.pug
 
