--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -153,3 +153,7 @@ $zindex-1: 100 !default;
 $zindex-2: 200 !default;
 $zindex-3: 300 !default;
 $zindex-4: 400 !default;
+
+// Shadows
+$shadow-close: 0.1rem;
+$shadow-far: 0.25rem;
