--- a/src/_badges.scss
+++ b/src/_badges.scss
@@ -14,7 +14,7 @@
       content: attr(data-badge);
       display: inline-block;
       transform: translate(-.05rem, -1.3rem);
-      z-index: 1;
+      z-index: $zindex-0;
     }
   }
   &[data-badge] {
