--- a/src/_modals.scss
+++ b/src/_modals.scss
@@ -19,7 +19,7 @@
 		z-index: $zindex-4;
 
 		.modal-overlay {
-			background: rgba($bg-color, .75);
+			background: rgba($dark-color, .75);
 			bottom: 0;
 			cursor: default;
 			display: block;
@@ -56,7 +56,7 @@
 
 .modal-container {
     $modal-padding: $unit-2;
-	@include shadow-variant(1rem);
+	@include shadow-variant($shadow-far);
 	background: $bg-color-light;
 	border-radius: $border-radius;
 	display: flex;
