Updates panel styling to match cards

--- a/src/_panels.scss
+++ b/src/_panels.scss
@@ -1,23 +1,24 @@
 // Panels
 .panel {
-  border: $border-width solid $border-color;
-  border-radius: $border-radius;
-  display: flex;
-  flex-direction: column;
+	background: $bg-color-light;
+	border-radius: $border-radius;
+	display: flex;
+	flex-direction: column;
+	@include shadow-variant($shadow-far);
 
-  .panel-header,
-  .panel-footer {
-    flex: 0 0 auto;
-    padding: $layout-spacing-lg;
-  }
+	.panel-header,
+	.panel-footer {
+		flex: 0 0 auto;
+		padding: $layout-spacing-lg;
+	}
 
-  .panel-nav {
-    flex: 0 0 auto;
-  }
+	.panel-nav {
+		flex: 0 0 auto;
+	}
 
-  .panel-body {
-    flex: 1 1 auto;
-    overflow-y: auto;
-    padding: 0 $layout-spacing-lg;
-  }
+	.panel-body {
+		flex: 1 1 auto;
+		overflow-y: auto;
+		padding: 0 $layout-spacing-lg;
+	}
 }
