Adds a new section called headers

--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -37,6 +37,7 @@ block content
             'elements',
             'Elements',
             {url: 'typography', name: 'Typography'},
+            {url: 'headers', name: 'Headers'},
             {url: 'tables', name: 'Tables'},
             {url: 'buttons', name: 'Buttons'},
             {url: 'forms', name: 'Forms'},
