Updates the docs

--- a/docs/components/tooltips.html
+++ b/docs/components/tooltips.html
@@ -58,6 +58,8 @@
                 <ul class="menu menu-nav">
                   <li class="menu-item"><a href="../elements/typography.html">Typography</a>
                   </li>
+                  <li class="menu-item"><a href="../elements/headers.html">Headers</a>
+                  </li>
                   <li class="menu-item"><a href="../elements/tables.html">Tables</a>
                   </li>
                   <li class="menu-item"><a href="../elements/buttons.html">Buttons</a>
@@ -234,9 +236,6 @@ Multiline">left tooltip</button>
             <p>Add the <code>\n</code> string between any text for multiline tooltips.</p>
             <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">button</span> <span class="hljs-attr">class</span>=<span class="hljs-string">"btn tooltip"</span> <span class="hljs-attr">data-tooltip</span>=<span class="hljs-string">"First Line Tooltip Text \n Second Line Tooltip Text"</span>&gt;</span>multiline tooltip<span class="hljs-tag">&lt;/<span class="hljs-name">button</span>&gt;</span>
 </code></pre>
-            <div class="docs-ad docs-ad-sidebar text-center">
-              <script id="_carbonads_js" async="" type="text/javascript" src="https://cdn.carbonads.com/carbon.js?serve=CK7DTKQW&amp;placement=picturepan2githubio"></script>
-            </div>
           </div>
           <div class="docs-footer container grid-lg" id="copyright">
             <p><a href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a> · <a href="https://ridestyler.com" target="_blank">RideStyler</a> · Version <span class="version"></span></p>
