--- a/docs/src/experimentals/off-canvas.pug
+++ b/docs/src/experimentals/off-canvas.pug
@@ -21,7 +21,7 @@ block docs-content
       .column
         .off-canvas.off-canvas-sidebar-show
           a.off-canvas-toggle.btn.btn-primary.btn-action(href="#sidebar-demo")
-            i.icon.icon-menu
+            i.icon.icon-bars
           #sidebar-demo.off-canvas-sidebar.flex-centered
             span Sidebar
           a.off-canvas-overlay(href="#close")
@@ -43,7 +43,7 @@ block docs-content
           <div class="off-canvas">
             <!-- off-screen toggle button -->
             <a class="off-canvas-toggle btn btn-primary btn-action" href="#sidebar-id">
-              <i class="icon icon-menu"></i>
+              <i class="icon icon-bars"></i>
             </a>
 
             <div id="sidebar-id" class="off-canvas-sidebar">
