--- a/docs/src/index.pug
+++ b/docs/src/index.pug
@@ -16,33 +16,12 @@ block content
       h2
         | RideStyler&apos;s CSS Framework for branded tools and applications
       p
-        a.btn.btn-primary.btn-lg.mr-2(href='getting-started.html') Docs
-        a.btn.btn-primary.btn-lg(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
+        a.btn.btn-lg.mr-2(href='getting-started.html') Docs
+        a.btn.btn-lg(href='https://github.com/Burkson/ridestyler.ui' target='_blank') GitHub
       p
         | Latest version: 
         span.version
-      .columns
-        .column.col-4.col-xs-12
-          .card.text-center
-            .card-header
-              span.card-title Lightweight
-            .card-body
-              | Lightweight  (~10KB gzipped) starting point for your projects
-        .column.col-4.col-xs-12
-          .card.text-center
-            .card-header
-              span.card-title Responsive
-            .card-body
-              | Flexbox-based, responsive and mobile-friendly layout
-        .column.col-4.col-xs-12
-          .card.text-center
-            .card-header
-              span.card-title Modern
-            .card-body
-              | Elegantly designed and developed elements and components
-  
-  .section.section-ads.bg-gray
-
+        
   .section.section-features.bg-ridestyler-orange.text-light.text-center
     .container.grid-lg
       h2 Introduction
@@ -50,11 +29,12 @@ block content
         .column.col-10.col-sm-12.col-mx-auto.text-left
           p
             strong ridestyler.ui 
-            | is a lightweight, responsive and modern CSS framework for faster and extensible development.
+            | is a lightweight, responsive and CSS framework built for RideStyler's branded tools and web applications.
           p
             | ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.
+  
         .column.col-10.col-sm-12.col-mx-auto
-          a.btn.btn-lg(href='getting-started/installation.html') Install ridestyler.ui
+          a.btn.btn-primary.btn-lg(href='getting-started/installation.html') Get Started
 
   footer.section.section-footer
     include _layout/_footer.pug
