--- a/docs/components/empty.html
+++ b/docs/components/empty.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="docs-container off-canvas off-canvas-sidebar-show">
-      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-menu"></i></a>
+      <div class="docs-navbar"><a class="off-canvas-toggle btn btn-link btn-action" href="#sidebar"><i class="icon icon-bars"></i></a>
         <div class="btns d-flex">
           <input class="docs-search form-input" type="text" placeholder="Search Docs"><a class="btn ml-1" href="https://www.paypal.me/picturepan2" target="_blank">PayPal</a><a class="btn btn-primary ml-1" href="https://github.com/picturepan2/ridestyler.ui" target="_blank">GitHub</a>
         </div>
@@ -199,7 +199,7 @@
         </div>
       </div><a class="off-canvas-overlay" href="#close"></a>
       <div class="off-canvas-content">
-        <div class="docs-content" id="content">
+        <div class="docs-content container grid-xl" id="content">
           <div class="container" id="empty">
             <h3 class="s-title">Empty states<a class="anchor" href="#empty" aria-hidden="true">#</a></h3>
             <p>Empty states/blank slates are commonly used as placeholders for first time use, empty data and error screens.</p>
