Fixes non-square and non-circular action buttons
Also gives them their own sub section in the documentation

--- a/docs/src/elements/buttons.pug
+++ b/docs/src/elements/buttons.pug
@@ -83,8 +83,9 @@ block docs-content
           <button class="btn btn-primary"><i class="icon icon-arrow-down"></i> normal</button>
           <button class="btn btn-primary btn-sm"><i class="icon icon-arrow-down"></i> small</button>
 
+    +docs-subheading('buttons-actions', 'Action buttons')
     p
-      | Please note that you could use the #[code btn-action] class for a square button, or add another #[code s-circle] class for a round button, which is often used as a Float Action Button (FAB).
+      | You can use the #[code btn-action] class for a square button. Add another #[code s-circle] class for a round button, which is often used as a floating action button.
 
     .docs-demo.columns
       .column.col-xs-12
