Fixes the alignment of `form-icon`s
Also updates some of the language for the `form-icon`s in the docs

--- a/docs/src/elements/forms.pug
+++ b/docs/src/elements/forms.pug
@@ -330,9 +330,7 @@ block docs-content
     +docs-subheading('forms-icons', 'Form icons')
 
     p
-      | ridestyler.ui Forms components has 
-      a(href="icons.html") ridestyler.ui Icons
-      |  support.
+      | Form components have full support for the built-in #[a(href="icons.html") icons].
     p
       | Add a wrapper with the #[code has-icon-left]/#[code has-icon-right] class to #{'<input>'} element.
       | And add the icon with #[code form-icon] class next to the #{'<input>'}.
